[package]
name = "headlines"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
confy = "0.6.0"
eframe = "0.25.0"
serde = { version = "1.0.195", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
newsapi = { path = "../newsapi" }
