[package]
name = "newsapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ureq = { version = "2.9.1", features = ["json"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
colour = "0.7.0"
thiserror = "1.0.56"
termimad = "0.26.1"
url = "2.5.0"
reqwest = { version = "0.11.23", features = ["json"], optional = true }

[features]
# list of crate the feature depends on
async = ["reqwest"]
